# app/Http/Controllers/Auth/CustomerResetPasswordController.php
@@ -30,11 +30,36 @@ class CustomerResetPasswordController extends Controller
      */
     protected $redirectTo = '/account';
 
-    /**
-     * Create a new controller instance.
+     /** @OA\Post(
+     * path="/api/v1/user/password/reset",
+     * summary="Customer Password Reset",
+     * description="Customer Password Reset",
+     * operationId="authCustomerPasswordReset",
+     * tags={"Forgot Password(Customer)"},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Pass Your Email and New passwword Address",
+     *    @OA\JsonContent(
+     *       required={"email"},
+     *       @OA\Property(property="email", type="email",  example="example@mail.com"),
+     *       @OA\Property(property="token", type="string",  example="token"),
+     *       @OA\Property(property="password", type="password",  example="yoursecret"),
+     *       @OA\Property(property="password_confirmation", type="password",  example="yoursecret"),
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=422,
+     *    description="Wrong input response",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Sorry, wrong email address. Please try again")
+     *        )
+     *     )
+     * )
      *
-     * @return void
+     * 
      */
+
+  
     public function __construct()
     {
         $this->middleware('guest:customer');
